restructure and controllers
